--- a/ModelessForm_ExternalEvent/ModelessForm_ExternalEvent.csproj
+++ b/ModelessForm_ExternalEvent/ModelessForm_ExternalEvent.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="Command.cs" />
+    <Compile Include="ElementData.cs" />
     <Compile Include="ModelessForm.cs">
       <SubType>Form</SubType>
     </Compile>
