--- a/ModelessForm_ExternalEvent/ModelessForm_ExternalEvent.csproj
+++ b/ModelessForm_ExternalEvent/ModelessForm_ExternalEvent.csproj
@@ -69,9 +69,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="RequestHandler.cs" />
-    <Compile Include="ToExcel\ImportDataFromExcel.cs" />
-    <Compile Include="ToExcel\ExportDataToExcel.cs" />
-    <Compile Include="ToExcel\Util.cs" />
+    <Compile Include="FromToExcel\ImportDataFromExcel.cs" />
+    <Compile Include="FromToExcel\ExportDataToExcel.cs" />
+    <Compile Include="FromToExcel\Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ModelessForm_ExternalEvent.addin">
